; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_unset_zval_property.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_unset_zval_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS_OBJECT = common dso_local global i64 0, align 8
@IS_ARRAY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @unset_zval_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unset_zval_property(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i64 @Z_TYPE_P(i32* %5)
  %7 = load i64, i64* @IS_OBJECT, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @Z_OBJCE_P(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = call i32 @zend_unset_property(i32 %11, i32* %12, i8* %13, i32 %15)
  br label %30

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = call i64 @Z_TYPE_P(i32* %18)
  %20 = load i64, i64* @IS_ARRAY, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %29

22:                                               ; preds = %17
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @Z_ARRVAL_P(i32* %23)
  %25 = load i8*, i8** %4, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @strlen(i8* %26)
  %28 = call i32 @zend_hash_str_del(i32 %24, i8* %25, i32 %27)
  br label %29

29:                                               ; preds = %22, %17
  br label %30

30:                                               ; preds = %29, %9
  ret void
}

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i32 @zend_unset_property(i32, i32*, i8*, i32) #1

declare dso_local i32 @Z_OBJCE_P(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @zend_hash_str_del(i32, i8*, i32) #1

declare dso_local i32 @Z_ARRVAL_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
